--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <script src="lesson-01/04.js"></script>
 
+    <script src="lesson-01/05.js"></script>
+
     <!-- Lesson 2 -->
     <script src="lesson-02/01.js"></script>
 
