--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <script src="lesson-01/05.js"></script>
 
+    <script src="lesson-01/06.js"></script>
+
     <!-- Lesson 2 -->
     <script src="lesson-02/01.js"></script>
 
